proxy working angular to nest

--- a/apps/angular-nest-proxy-example/src/app/app.component.html
+++ b/apps/angular-nest-proxy-example/src/app/app.component.html
@@ -1,2 +1,3 @@
-<angular-nest-proxy-example-nx-welcome></angular-nest-proxy-example-nx-welcome>
+<h1>{{ $any(data$ | async).message }}</h1>
 <router-outlet></router-outlet>
+<h2>Hello</h2>
